--- a/front/src/Pages/Inventory.css
+++ b/front/src/Pages/Inventory.css
@@ -156,58 +156,6 @@ body {
     height: 14px;
 }
 
-.filter-container {
-    position: relative;
-    display: flex;
-    gap: 5px;
-    align-items: center;
-}
-
-.filter-icon {
-    width: 14px;
-    height: 14px;
-}
-
-.filter-dropdown {
-    position: relative;
-    text-align: center;
-    color: rgb(123, 123, 123);
-    margin-bottom: 10px;
-    margin-left: 10px; /* Adjust this value to move the dropdown button to the right */
-}
-
-.filter-dropdown select {
-    padding: 8px 30px 8px 10px; /* Adjust padding to accommodate the icon */
-    border: none; /* Remove the border */
-    border-radius: 4px; /* Add border radius */
-    background-color: #fff; /* Set background color */
-    font-family: 'Poppins', sans-serif; /* Set font family */
-    cursor: pointer; /* Change cursor to pointer */
-    -webkit-appearance: none; /* Remove default appearance */
-    -moz-appearance: none; /* Remove default appearance */
-    appearance: none; /* Remove default appearance */
-    position: relative; /* Position relative for the icon */
-}
-
-.filter-dropdown select:hover,
-.filter-dropdown select:focus {
-    border-color: #7a6783; /* Change border color on hover and focus */
-}
-
-.filter-dropdown select option {
-    padding: 8px 10px; /* Adjust padding */
-    font-family: 'Poppins', sans-serif; /* Set font family */
-}
-
-.dropdown-icon {
-    position: absolute; /* Position the icon absolutely */
-    top: 50%; /* Align vertically */
-    right: 10px; /* Adjust distance from the right */
-    transform: translateY(-50%); /* Center vertically */
-    width: 14px; /* Set width */
-    height: 14px; /* Set height */
-    pointer-events: none; /* Disable pointer events */
-}
 
 
 
@@ -278,3 +226,30 @@ body {
     height: 20px;
 }
 
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .add-new-entry-popup {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    position: relative;
+  }
+  
+  .close-button {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    cursor: pointer;
+  }
+  
