--- a/front/src/Pages/Dashboard.css
+++ b/front/src/Pages/Dashboard.css
@@ -155,6 +155,12 @@ body {
   .card-view-text {
   flex-grow: 1;
   }
+  select.date-drop {
+    outline: none;
+    border: none;
+    background-color: transparent;
+  }
+
   .link-text {
     color: inherit; 
     text-decoration: none; 
