--- a/front/src/Pages/Inventory.css
+++ b/front/src/Pages/Inventory.css
@@ -129,6 +129,7 @@ select.filter-drop {
 }
 
 .search-bar-container {
+    position: relative;
     display: flex;
     gap: 5px;
     justify-content: space-between;
@@ -146,6 +147,31 @@ select.filter-drop {
     border-radius: 4px;
     align-items: center;
     background-color: #E3EBF3;
+}
+.search-results-dropdown
+{
+    min-width: 30%;
+    width: 30%;
+    border-radius: 10px;
+    border: 1px solid black;
+    background-color: white;
+    z-index: 100;
+    top: 90%;
+    font-weight: 500;
+    position: absolute;
+}
+
+.search-results-dropdown li:hover{
+    background-color: aquamarine;
+    border-radius: 7px;
+}
+
+.search-results-dropdown ul
+{
+    padding: 10px 10px 10px 10px;
+    margin: 5px;
+    border-radius: 10px;
+    list-style-type: none;
 }
 
 .search-input {
