--- a/front/src/Pages/Patients.css
+++ b/front/src/Pages/Patients.css
@@ -156,59 +156,6 @@ body {
     height: 14px;
 }
 
-.filter-container {
-    position: relative;
-    display: flex;
-    gap: 5px;
-    align-items: center;
-}
-
-.filter-icon {
-    width: 14px;
-    height: 14px;
-}
-
-.filter-dropdown {
-    position: relative;
-    text-align: center;
-    color: rgb(123, 123, 123);
-    margin-bottom: 10px;
-    margin-left: 10px; /* Adjust this value to move the dropdown button to the right */
-}
-
-.filter-dropdown select {
-    padding: 8px 30px 8px 10px; /* Adjust padding to accommodate the icon */
-    border: none; /* Remove the border */
-    border-radius: 4px; /* Add border radius */
-    background-color: #fff; /* Set background color */
-    font-family: 'Poppins', sans-serif; /* Set font family */
-    cursor: pointer; /* Change cursor to pointer */
-    -webkit-appearance: none; /* Remove default appearance */
-    -moz-appearance: none; /* Remove default appearance */
-    appearance: none; /* Remove default appearance */
-    position: relative; /* Position relative for the icon */
-}
-
-.filter-dropdown select:hover,
-.filter-dropdown select:focus {
-    border-color: #7a6783; /* Change border color on hover and focus */
-}
-
-.filter-dropdown select option {
-    padding: 8px 10px; /* Adjust padding */
-    font-family: 'Poppins', sans-serif; /* Set font family */
-}
-
-.dropdown-icon {
-    position: absolute; /* Position the icon absolutely */
-    top: 50%; /* Align vertically */
-    right: 10px; /* Adjust distance from the right */
-    transform: translateY(-50%); /* Center vertically */
-    width: 14px; /* Set width */
-    height: 14px; /* Set height */
-    pointer-events: none; /* Disable pointer events */
-}
-
 
 
 
@@ -310,3 +257,52 @@ body {
     text-decoration: none;
     cursor: pointer;
 }
+
+.table {
+    overflow-x: auto;
+    max-width: 100%; 
+}
+
+.medicines-table {
+    width: 100%; 
+}
+
+
+@media (max-width: 600px) {
+    .medicines-table th,
+    .medicines-table td {
+        font-size: 14px; 
+    }
+}
+
+@media (max-width: 600px) {
+    .header {
+        padding: 9px 10px; /* Reduce padding on smaller screens */
+    }
+    
+    .header-content {
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between; /* Ensure items are spaced out evenly */
+        gap: 10px; /* Reduce gap on smaller screens */
+    }
+    
+    .header-left,
+    .header-center,
+    .header-right {
+        display: flex;
+        align-items: center;
+    }
+    
+    .header-center {
+        flex-grow: 1;
+        justify-content: center; /* Center align items */
+    }
+
+    .medicines-table {
+        width: 90%; /* Reduce table width for smaller screens */
+    }
+}
+
+
+
