--- a/front/src/Pages/Inventory.css
+++ b/front/src/Pages/Inventory.css
@@ -89,8 +89,10 @@ select.filter-drop {
 
 .title-section {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
+    width: 100%;
+    gap: 10px;
 }
 
 .title {
@@ -98,6 +100,7 @@ select.filter-drop {
     font-family: Poppins, sans-serif;
     font-size: 24px;
     font-weight: 700;
+    grid-column: 1 / -1;
 }
 
 .subtitle {
@@ -107,9 +110,11 @@ select.filter-drop {
     font-weight: 700;
 }
 
+
 .buttons {
     display: flex;
     gap: 10px;
+    flex: 1 1 auto;
 }
 
 .buttons button {
@@ -127,12 +132,20 @@ select.filter-drop {
 .buttons button:hover {
     background-color: #6a5872;
 }
-@media (max-width: 600px) {
-        .buttons button{
-            font-size: 10px;
-            padding: 4px 8px;
-        }
+@media (min-width: 804px) {
+    .buttons {
+        justify-content: flex-end;
+    }
 }
+@media (max-width: 804px) {
+    .buttons {
+        justify-content: center;
+    }
+    .title-section{
+        justify-self: center;
+    }
+}
+
 .search-bar-container {
     position: relative;
     display: flex;
@@ -193,12 +206,16 @@ select.filter-drop {
 }
 
 
-
-
+.table-container {
+    width: 100%;
+    overflow-x: auto;
+    margin-top: 7px;
+    background-color: white;
+}
 
 .medicines-table {
     margin-top: 7px;
-    width: 100%;
+    max-width: 100%;
     background-color: white;
     border-collapse: collapse;
   }
