--- a/front/src/Components/Header.css
+++ b/front/src/Components/Header.css
@@ -1,66 +1,59 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 .header {
-    background-color: #7a6783;
-    display: flex;
-    justify-content: center;
-    padding: 9px 60px;
-    color: #fff;
-  }
-  
-  .header-content {
-    display: flex;
-    width: 100%;
-    max-width: 1005px;
-    gap: 20px;
-    justify-content: space-between;
-  }
-  
-  .header-right {
-    color: inherit; 
-    text-decoration: none; 
-    display: flex;
-    align-items: center;
-  }
-  
-  .header-logo {
-    width: 42px;
-    margin-right: 16px;
-  }
-  
-  .header-name {
-    font-family: Poppins, sans-serif;
-    font-size: 18px;
-    font-weight: 600;
-  }
-  
-  .header-center {
-    font-family: Poppins, sans-serif;
-    font-weight: 500;
-    font-size: 14px;
-  }
-  
-  .header-notification-icon {
-    width: 11px;
-    margin-right: 16px;
-  }
-  
-  .header-notification-text {
-    font-family: Poppins, sans-serif;
-    font-size: 14px;
-  }
-  
-  .header-notification-count {
-    background-color: #bc5e58;
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: Poppins, sans-serif;
-    font-size: 10px;
-  }
-  
-  .header-right:hover {
-    color: inherit;
-    text-decoration: none;
-  }
+  background-color: #7a6783;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 9px 60px;
+  color: #fff;
+}
+
+.header-content {
+  display: flex;
+  width: 100%;
+  max-width: 1005px;
+  gap: 20px;
+  justify-content: space-between;
+}
+
+.header-left, .header-right {
+  display: flex;
+  align-items: center;
+}
+
+.header-logo {
+  width: 42px;
+  margin-right: 16px;
+}
+
+.header-name {
+  font-family: Poppins, sans-serif;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.header-right a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.header-right:hover a {
+  text-decoration: underline;
+}
+
+.logout-button, .login-button {
+  background-color: white;
+  color: #7a6783;
+  border: none;
+  padding: 10px 10px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 16px;
+  font-family: Poppins, sans-serif;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+.logout-button:hover, .login-button:hover {
+  background-color: #f0f0f0;
+}
