--- a/front/src/Pages/Dashboard.css
+++ b/front/src/Pages/Dashboard.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 body {
-    margin: 0; /* Remove default body margin */
-    background-color: #edf1f5; /* Apply background color */
+    margin: 0;
+    background-color: #edf1f5;
   }
 
 .main {
