--- a/front/src/Pages/Login.css
+++ b/front/src/Pages/Login.css
@@ -33,12 +33,12 @@
 }
 
 .form-group input {
-    width: calc(100% - 20px); /* Adjusting the width to account for padding */
+    width: calc(100% - 20px);
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
-    margin: 0 auto; /* Center the input field */
+    margin: 0 auto;
     display: block;
 }
 
